[package]
name = "magic-cli"
version = "0.0.4"
description = "Command line utility to make you a magician in the terminal"
homepage = "https://github.com/guywaldman/magic-cli"
repository = "https://github.com/guywaldman/magic-cli"
edition = "2021"

[dependencies]
orch = { version = "0.0.14" }
orch_response = { version = "0.0.14" }                 # Will be bundled inside `orch` (#10)
chrono = "0.4.38"
clap = { version = "4.5.7", features = ["derive"] }
clipboard = "0.5.0"
colored = "2.1.0"
const_format = "0.2.32"
home = "0.5.9"
httpmock = "0.7.0"
inquire = "0.7.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
simsimd = "4.4.0"
thiserror = "1.0.61"
tokio = "1.38.0"
sysinfo = "0.30.12"
async-trait = "0.1.81"
dyn-clone = "1.0.17"

[dev-dependencies]
chrono = "0.4.38"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.16.0"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "guywaldman/homebrew-tap"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
	"aarch64-apple-darwin",
	"x86_64-apple-darwin",
	"x86_64-unknown-linux-gnu",
	"x86_64-pc-windows-msvc",
]
# CI backends to support
ci = "github"
# Publish jobs to run in CI
pr-run-mode = "plan"
# Whether to install an updater program
install-updater = false

[workspace.metadata.dist.dependencies.apt]
libxcb-xfixes0-dev = "*"
